# agentic-tokenomics

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEASIBILITY-REVIEW.md  LICENSE.md  PR-12-REVIEW-AND-MERGE-PLAN.md  PR11_MERGE_PLAN.md  README.md  VOICE-MEMO-ANALYSIS.md  WG_BULK_PACK.md  agent_test.txt  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  verify.yml  wasm-size.yml
agent-001-registry-reviewer/: .env.example  package-lock.json  package.json
agent-001-registry-reviewer/src/: config.ts  index.ts  ledger.ts  ooda.ts  output.ts  reviewer.ts  store.ts  types.ts
agent-001-registry-reviewer/src/workflows/: batch-review.ts  class-screening.ts  project-validation.ts
agent-002-governance-analyst/: .env.example  README.md  package-lock.json  package.json
agent-002-governance-analyst/src/: analyst.ts  config.ts  index.ts  ledger.ts  output.ts  store.ts  types.ts
agent-002-governance-analyst/src/workflows/: post-vote-report.ts  proposal-analysis.ts  voting-monitor.ts
agentic-tokenomics-main 5/: README.md
agentic-tokenomics-main 5/docs/: RELEASE.md
agentic-tokenomics-main 5/mechanisms/m010-reputation-signal/: README.md  SPEC.md
agentic-tokenomics-main 5/phase-1/: 1.1-stakeholder-value-flow.md  1.2-tokenomic-mechanisms.md  1.3-agentic-services.md  1.4-governance-architecture.md  1.5-system-architecture.md  README.md
agentic-tokenomics-main 5/phase-2/: 2.1-token-utility-mechanisms.md  2.2-agentic-workflows.md  2.3-governance-processes.md  2.4-agent-orchestration.md  2.5-data-schema-integration.md  README.md
agentic-tokenomics-main 5/phase-3/: 3.1-smart-contract-specs.md  3.2-agent-implementation.md  3.3-testing-plan.md  3.4-security-framework.md  3.5-technical-docs.md  README.md
agentic-tokenomics-main 5/scripts/: verify.mjs
agents/: .env.example  docker-compose.yml  init.sql  package-lock.json  package.json  tsconfig.json  vitest.config.ts
agents/__tests__/: analyze-proposal.test.ts  koi-client.test.ts  ledger-client.test.ts  ooda-executor.test.ts
contracts/: Cargo.toml
contracts/attestation-bonding/: Cargo.toml
contracts/attestation-bonding/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/contribution-rewards/: Cargo.toml
contracts/contribution-rewards/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/credit-class-voting/: Cargo.toml
contracts/credit-class-voting/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/dynamic-supply/: Cargo.toml
contracts/dynamic-supply/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/fee-router/: Cargo.toml
contracts/fee-router/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/integration-tests/: Cargo.toml
contracts/integration-tests/src/: lib.rs
contracts/integration-tests/tests/: integration.rs
contracts/marketplace-curation/: Cargo.toml
contracts/marketplace-curation/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/reputation-signal/: Cargo.toml
contracts/reputation-signal/src/: contract.rs  error.rs  msg.rs  state.rs  tests.rs
contracts/service-escrow/: Cargo.toml
contracts/service-escrow/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/validator-governance/: Cargo.toml
contracts/validator-governance/src/: contract.rs  error.rs  msg.rs  state.rs
docs/: CONTRIBUTOR_NAV.md  DEPENDENCIES.md  DEV_SETUP.md  ECOSYSTEM.md  GLOSSARY.md  MAINNET_READINESS.md  MECHANISM_CONSUMERS.md  MECHANISM_INDEX.md  bioregional-validators.md  community-background.md  cosmos-poa-module.md  sdk-v054-migration.md
docs/architecture/: STACK_MAP.md  STACK_MAP.mmd
docs/contributor-guide/: README.md  skill-organization.md
docs/economics/: economic-simulation-spec.md  proposal-buy-and-burn.md  token-economics-synthesis.md
docs/governance/: agentic-governance-roadmap.md  economic-reboot-proposals.md  expanded-network-definition.md  needs-governance-proposals.md  open-questions-resolution.md  pacto-opal-alignment.md  poa-open-questions-triage.md  regen-commons-integration.md  validator-selection-rubric.md
docs/integration/: claims-engine-architecture.md  cosmwasm-work-packages.md
docs/learning/: continuous-learning-architecture.md  contributor-learning-paths.md
mechanisms/m001-enh-credit-class-approval/: README.md  SPEC.md
mechanisms/m001-enh-credit-class-approval/datasets/: README.md  schema.json
mechanisms/m001-enh-credit-class-approval/reference-impl/: README.md  m001_kpi.js  m001_score.js
mechanisms/m001-enh-credit-class-approval/schemas/: README.md  m001_agent_score.schema.json  m001_kpi.schema.json  m001_proposal.schema.json
mechanisms/m008-attestation-bonding/: README.md  SPEC.md
mechanisms/m008-attestation-bonding/datasets/: README.md  schema.json
mechanisms/m008-attestation-bonding/reference-impl/: README.md  m008_kpi.js  m008_score.js
mechanisms/m008-attestation-bonding/schemas/: README.md  m008_attestation.schema.json  m008_kpi.schema.json  (+1 more)
mechanisms/m010-reputation-signal/: README.md  SPEC.md
mechanisms/m011-marketplace-curation/: README.md  SPEC.md
mechanisms/m012-fixed-cap-dynamic-supply/: README.md  SPEC.md
mechanisms/m014-authority-validator-governance/: README.md  SPEC.md
mechanisms/m015-contribution-weighted-rewards/: SPEC.md
phase-1/: 1.2-tokenomic-mechanisms.md
phase-2/: 2.1-token-utility-mechanisms.md  2.2-agentic-workflows.md  2.3-governance-processes.md  2.6-economic-reboot-mechanisms.md  README.md
phase-3/: 3.1-smart-contract-specs.md  3.2-agent-implementation.md  3.3-testing-plan.md  3.4-security-framework.md  3.5-technical-docs.md  3.6-agent-orchestration-runtime.md  3.8-elizaos-reference-implementation.md  m013-contract-architecture.md
phase-4/: 4.1-testnet-deployment.md  4.3-community-onboarding.md  README.md
phase-5/: 5.2-evolution-governance.md
schemas/: work-order.schema.json
scripts/: build-mechanism-index.mjs  verify-m010-datasets.mjs  verify-m010-reference-impl.mjs  verify.mjs
simulations/cadcad/: README.md  analysis.py  equilibrium_analysis.md  requirements.txt  run_baseline.py  run_monte_carlo.py  run_stress_tests.py  run_sweep.py
(+87 files in other folders)
