[workspace]
members = [
    "attestation-bonding",
    "contribution-rewards",
    "credit-class-voting",
    "integration-tests",
    "marketplace-curation",
    "service-escrow",
    "validator-governance",
]
resolver = "2"

[workspace.dependencies]
cosmwasm-schema = "2.2"
cosmwasm-std = "2.2"
cw-storage-plus = "2.0"
cw2 = "2.0"
cw-multi-test = "2.0"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
