[package]
name = "attestation-bonding"
version = "0.1.0"
edition = "2021"
description = "M008 Data Attestation Bonding — CosmWasm contract for bonded ecological attestations with challenge/dispute resolution"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Use library feature to allow importing from other contracts
library = []

[dependencies]
cosmwasm-schema = "2.2"
cosmwasm-std = { version = "2.2", features = ["staking"] }
cw-storage-plus = "2.0"
cw2 = "2.0"
schemars = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
thiserror = "2"

[dev-dependencies]
cosmwasm-std = { version = "2.2", features = ["staking"] }
