[package]
name = "marketplace-curation"
version = "0.1.0"
edition = "2021"
description = "M011 Marketplace Curation & Quality Signals — CosmWasm contract"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "2.2", features = ["staking"] }
cosmwasm-schema = "2.2"
cw-storage-plus = "2.0"
cw2 = "2.0"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
cosmwasm-std = { version = "2.2", features = ["staking"] }
