[package]
name = "marketplace-curation"
version = "0.1.0"
edition = "2021"
description = "M011 Marketplace Curation — on-chain curation layer where curators bond REGEN, create vetted credit batch collections, and earn trade fees"
license = "Apache-2.0"
repository = "https://github.com/regen-network/agentic-tokenomics"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "2.2"
cosmwasm-std = "2.2"
cw-storage-plus = "2.0"
cw2 = "2.0"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
cw-multi-test = "2.0"
