[package]
name = "reputation-signal"
version = "0.1.0"
edition = "2021"
description = "M010 Reputation Signal — stake-weighted endorsement signals with challenge/dispute lifecycle for Regen Network"
license = "Apache-2.0"
repository = "https://github.com/regen-network/agentic-tokenomics"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Use library feature to disable entry points when imported as dependency
library = []

[dependencies]
cosmwasm-schema = "2.2"
cosmwasm-std = "2.2"
cw-storage-plus = "2.0"
cw2 = "2.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
cosmwasm-std = { version = "2.2", features = ["staking"] }
