[package]
name = "service-escrow"
version = "0.1.0"
edition = "2021"
description = "M009 Service Provision Escrow — milestone-based payment escrow with dispute resolution for Regen Network ecosystem services"
license = "Apache-2.0"
repository = "https://github.com/regen-network/agentic-tokenomics"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "2.2"
cosmwasm-std = "2.2"
cw-storage-plus = "2.0"
cw2 = "2.0"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
cw-multi-test = "2.0"
