[package]
name = "service-escrow"
version = "0.1.0"
edition = "2021"
description = "M009 Service Provision Escrow — milestone-based payment escrow with dispute resolution for Regen Network ecosystem services"
license = "Apache-2.0"
repository = "https://github.com/regen-network/agentic-tokenomics"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
