[package]
name = "regen-validator-governance"
version = "0.1.0"
edition = "2021"
description = "M014 Authority Validator Governance — PoA validator set management, scoring, and governance for Regen Network"
license = "Apache-2.0"
repository = "https://github.com/regen-network/agentic-tokenomics"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Disable export of entry points for non-wasm builds (e.g. unit tests)
library = []

[dependencies]
cosmwasm-schema = "2.2"
cosmwasm-std = "2.2"
cw-storage-plus = "2.0"
cw2 = "2.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "2"

[dev-dependencies]
